# trying-SDL

./: .clang-format  CMakeLists.txt
src/: main.cpp
src/engine/: CollisionSystem.hpp  Components.hpp  Engine.hpp  Entity.hpp  MovementSystem.hpp  config.txt
